--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "relay": "relay-compiler"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-native": "0.76.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "0.76.1",
+    "react-relay": "^18.1.0",
+    "relay-runtime": "^18.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -25,12 +29,16 @@
     "@react-native/metro-config": "0.76.1",
     "@react-native/typescript-config": "0.76.1",
     "@types/react": "^18.2.6",
+    "@types/react-relay": "^16.0.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-relay": "^18.1.0",
     "eslint": "^8.19.0",
+    "graphql": "^16.9.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
+    "relay-compiler": "^18.1.0",
     "typescript": "5.0.4"
   },
   "engines": {
