--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
     "relay": "relay-compiler"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.1",
+    "react-native-gesture-handler": "^2.20.2",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^3.35.0",
     "react-relay": "^18.1.0",
     "relay-runtime": "^18.1.0"
   },
