--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-gesture-handler": "^2.20.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^3.35.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-relay": "^18.1.0",
     "relay-runtime": "^18.1.0"
   },
@@ -36,6 +37,7 @@
     "@react-native/metro-config": "0.76.1",
     "@react-native/typescript-config": "0.76.1",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-relay": "^16.0.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
