--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "relay": "relay-compiler"
+    "relay": "relay-compiler",
+    "android-clean": "cd android && ./gradlew clean",
+    "clean-install": "rm -rf node_modules; rm -rf ios/Pods; yarn install --frozen-lockfile && cd ios && pod install --repo-update; yarn android-clean"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -22,8 +24,10 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^3.35.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-vision-camera": "^4.6.0",
     "react-relay": "^18.1.0",
-    "relay-runtime": "^18.1.0"
+    "relay-runtime": "^18.1.0",
+    "relay-test-utils": "^18.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -36,17 +40,22 @@
     "@react-native/eslint-config": "0.76.1",
     "@react-native/metro-config": "0.76.1",
     "@react-native/typescript-config": "0.76.1",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.8.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-relay": "^16.0.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/relay-test-utils": "^18.0.0",
     "babel-jest": "^29.6.3",
     "babel-plugin-relay": "^18.1.0",
     "eslint": "^8.19.0",
+    "eslint-plugin-testing-library": "^6.4.0",
     "graphql": "^16.9.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "^18.3.1",
     "relay-compiler": "^18.1.0",
     "typescript": "5.0.4"
   },
