--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clean-install": "rm -rf node_modules; rm -rf ios/Pods; yarn install --frozen-lockfile && cd ios && pod install --repo-update; yarn android-clean"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -21,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-native": "0.76.1",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-offline": "^6.0.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^3.35.0",
     "react-native-vector-icons": "^10.2.0",
